--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,11 @@ doctype html
 html
     head
         title= `${title}`
-    body
-        h1 My Amazing App
+        link(rel='stylesheet', href='/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/css/styles.css')
 
-        block content
+    body
+        div.container.listing-reg
+            h1 My Amazing App
+
+            block content
